test/fixtures/diagnostics/type-checker/negative/keyof-record-mismatch/input.tysh
namespace Samples.Keyof

record Customer(Name: string, Age: int)

type CustomerKey = keyof Customer

fun invalid(): CustomerKey = "Tier"

export fun leak(): CustomerKey = "Name"
